name:                bindings-wlc
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/bindings-wlc#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
                       Bindings.WLC
                       Bindings.WLC.WLC
                       Bindings.WLC.Geometry
  build-depends:       base >= 4.7 && < 5,
                       bindings-DSL >= 1.0.23 && < 1.1
  default-language:    Haskell2010
  extra-libraries:     wlc
  extensions:
    ForeignFunctionInterface

test-suite bindings-wlc-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , bindings-wlc
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/bindings-wlc
